--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <h1>WEBBUSTERS5</h1>
 </header>
 
-TESTTT
 <br>
 <p id="introduction">Welcome to our Treasure <span style="color:white;">Hunt</span> Game</p>
 <p></p>
@@ -30,7 +29,7 @@ TESTTT
     Rules of the Game:<br>
     <ul>
     <li>
-        Log-in by entering your username and password.   HI  TO EVERYONE!!!
+        Log-in by entering your username and password.
     </li>
     <li> Answer the first question
     </li>
