ghaith at 3:09 ps thu 22 jan

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <button class ="socialBtn">TikTok</button>
     </a>
 
-    <a href="https://www.instagram.com/web.busters5/" target="_blank">
+    <a href="https://x.com/Web_Busters5" target="_blank">
         <button class ="socialBtn">Twitter</button>
     </a>
 </div>
