playing around with design

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 <p id="team">
     Our team consists of the following members:<br>
-    <br> <span style="color:white;">Kyveli Christoforou:</span> Team Leader
-    <br> <span style="color:white;">Arestis Evangelou:</span> Designer Team
-    <br> <span style="color:white;">Gaith Hashim: </span>Social Media Team
-    <br> <span style="color:white;">Zhyharevich Andrey:</span>
-    <br> <span style="color:white;">Diego Mandela Antoniades:</span>
+    <br> <span >Kyveli Christoforou:</span> Team Leader
+    <br> <span >Arestis Evangelou:</span> Designer Team
+    <br> <span >Gaith Hashim: </span>Social Media Team
+    <br> <span >Zhyharevich Andrey:</span>
+    <br> <span >Diego Mandela Antoniades:</span>
 </p>
 
 <p id="rulesOfTheGames">
